# vectro

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  pixi.toml  pyproject.toml  reproduce_paper.ps1  reproduce_paper.sh  setup.py
.cargo/: config.toml
.github/workflows/: bench-cross-platform.yml  ci.yml  wheels.yml
.konjo/scripts/: dry_check.py  konjo_review.py
api/: app.py  main.py  store.py  test_hybrid.py  test_viz.py  viz.py
benchmarks/: benchmark_ann_comparison.py  benchmark_faiss_comparison.py  benchmark_python_fallback.py  benchmark_real_embeddings.py  benchmark_real_embeddings_v2.py  cross_platform_benchmark.py  platform_detection.py  vectro_paper_benchmark.py
demo/: demo.py  index.html  server.py
demos/: demo_v2.py  demo_v3.py  video_demo_v3.py
examples/: vector_search_quickstart.py
notebooks/: vectro_paper_results.ipynb
python/: __init__.py  __init__.pyi  _mojo_bridge.py  _rust_bridge.py  async_pipeline.py  auto_quantize_api.pyi  batch_api.py  batch_api.pyi  benchmark.py  benchmark.pyi  bf16_api.py  binary_api.py  binary_api.pyi  cli.py  codebook_api.pyi  gpu_api.pyi  hnsw_api.py  hnsw_api.pyi  interface.py  interface.pyi  ivf_api.py  ivf_api.pyi  lora_api.py  lora_api.pyi  migration.py  migration.pyi  nf4_api.py  nf4_api.pyi  onnx_export.py  pipeline_checkpoint.py  pq_api.py  pq_api.pyi  profiles.py  profiles_api.py  profiles_api.pyi  quality_api.py  quality_api.pyi  quantization_audit.py  quantization_extra.py  quantization_extra.pyi  (+11 more)
python/embeddings/: __init__.py  __init__.pyi  base.py  base.pyi  cohere.py  cohere.pyi  openai.py  openai.pyi  sentence_transformers.py  sentence_transformers.pyi  voyage.py  voyage.pyi
python/examples/: konjos_integration.py
rust/vectro_lib/: Cargo.toml
rust/vectro_lib/benches/: int8_fused_bench.rs
rust/vectro_lib/src/quant/: accelerate.rs  int8.rs  mod.rs
rust/vectro_py/: Cargo.toml  build.rs
rust/vectro_py/src/: lib.rs
scripts/: aggregate_paper_tables.py  benchmark_vs_faiss.py  eval_profiles.py  validate_paper_results.py
tests/: run_all_tests.py  test_arrow_bridge.py  test_async_compress.py  test_async_pipeline.py  test_batch_api.py  test_bf16.py  test_cross_platform_benchmarks.py  test_dspy_integration.py  test_embeddings_base.py  test_embeddings_providers.py  test_haystack_async.py  test_haystack_integration.py  test_haystack_mmr.py  test_haystack_reranker.py  test_hnsw_extended.py  test_hybrid_search.py  test_int8_normalized_and_f16.py  test_integration.py  test_ivf.py  test_langchain_integration.py  test_langchain_protocol.py  test_latency_singleshot.py  test_llamaindex_async.py  test_lora.py  test_model_profile_routing.py  test_mojo_bridge.py  test_onnx_export.py  test_paper_benchmark.py  test_profiles_api.py  test_python_api.py  test_quantization_audit.py  test_quantization_config.py  test_quantization_extra.py  test_release_candidate.py  test_retriever.py  test_rrf_retriever.py  test_sklearn_subprocess_isolation.py  test_storage_v3.py  test_telemetry.py  test_v3_api.py
(+26 files in other folders)
