[package]
name = "vectro_lib"
version = "8.0.0"
edition = "2021"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
description = "Core Rust library for high-performance vector quantization and search"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"
nalgebra = "0.32"
anyhow = "1.0"
simsimd = "6"
half = "2.4"

[features]
default = []
# Wave 3d — route the INT8 encode multiply through Apple's Accelerate
# framework so vDSP can dispatch large workloads through the AMX
# coprocessor on M1 / M2 / M3.  Off by default; macOS only.  When
# enabled, vectro_py's build.rs links the Accelerate framework.
vectro_lib_accelerate = []

[dev-dependencies]
tempfile = "3.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "quant_bench"
harness = false

[[bench]]
name = "int8_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "int8_fused_bench"
harness = false
